hphp/test/slow/debug_backtrace/metadata_call_user_func.php.expectf
Fatal error: Uncaught exception 'InvalidArgumentException' with message 'Unsupported dynamic call of set_frame_metadata()' in %smetadata_call_user_func.php:8
Stack trace:
#0 %smetadata_call_user_func.php(8): HH\set_frame_metadata()
#1 %smetadata_call_user_func.php(12): foo()
#2 {main}
